new theme and informations about PyCon Amazonia 2018

--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -1,25 +1,35 @@
-<section class="location" id="location">
-  <div class="row">
-    {% include "includes/icons/maps-icon.html" %}
-
-    <h1>Manaus - Amazonas</h1>
-    <h2><a href="/images/manaus.pdf" target="_blank" class="link">Informações Turísticas e de Hospedagem</a></h2>
-    <h3>Endereço do evento</h3>
-    <p>
-      Avenida Darcy Vargas, 1200 - Parque 10<br/>
-      69050-020 Manaus, Amazonas
-    </p>
-    <br>
-    <p>
-      <a href="http://www3.uea.edu.br/" target="_blank" class="link" style="font-size: larger; font-weight: bold">
-        Acesse o site da UEA</a>
-    </p>
-    <br>
-    <div class="map-container">
-      <iframe scrolling="no" marginheight="0" marginwidth="0"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7968.046696989688!2d-60.024461003030204!3d-3.088441040959843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c1aa5a5540129%3A0x148088e86e2c44f7!2sEscola+Superior+de+Tecnologia+-+EST!5e0!3m2!1sen!2sbe!4v1491033912128"
-              height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-  </div>
-
-</section>
+    <section id="section-venue" class="section-wrapper  gray-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>LOCAL</h1>
+              <p>Avenida Sete de Setembro, 1975, Centro, Manaus/AM</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div id="googleMap">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.85018571195!2d-60.01499228465953!3d-3.134256441318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c057715e51dc1%3A0x131a0659382fadd9!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+do+Amazonas+-+IFAM+-+Unidade+Centro!5e0!3m2!1spt-BR!2sbr!4v1525457587301"
+                frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h2>STAY INFORMED</h2>
+              <p>Don't miss the event!</p>
+            </div>
+            <form id="contactForm" class="subscribe-form form-inline" action="sendemail.php" method="POST">
+              <div class="form-group">
+                <label for="emailTwo" class="sr-only">Email</label>
+                <input type="email" class="form-control input-lg" required="" id="emailTwo" name="email" placeholder="Enter your email address">
+              </div>
+              <button type="submit" class="btn btn-primary btn-lg">SUBSCRIBE</button>
+            </form>
+          </div>
+        </div> -->
+      </div>
+    </section>
