--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -1,22 +1,16 @@
-<section class="schedule" id="schedule">
-  <div class="row">
-    <h1>Programação</h1>
-    <p class="schedule-description">12 e 13 de Agosto 2017</p>
-
-    <nav class="days">
-      <ul class="list">
-        <li class="item">
-          <a href="#day1" class="item-link active">Dia 12</a>
-        </li>
-
-        <li class="item">
-          <a href="#day2" class="item-link">Dia 13</a>
-        </li>
-      </ul>
-    </nav>
-
-    {% include "includes/days/day1.html" %}
-
-    {% include "includes/days/day2.html" %}
-  </div>
-</section>
+    <section id="section-schedule" class="section-wrapper section-ajenda gray-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>PROGRAMAÇÃO</h1>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="text-center">Em breve</h2>  
+          </div>
+        </div>
+      </div>
+    </section>
