--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -1,34 +1,30 @@
-<section class="speakers" id="speakers">
-    <div class="row">
-        <h1>Keynotes</h1>
-
-        <ul class="speakers-list">
-
-            <li class="speaker">
-                <a href="https://about.me/fmasanori" target="_blank" class="speaker-link">
-                    <div class="photo">
-                        <img src="/images/massanori.jpg" alt="Fernando Massanori">
-                    </div>
-
-                    <h2 class="speaker-name">Fernando Massanori</h2>
-                    <p class="speaker-description">Professor na FATEC de São José dos Campos, criador do curso <a href="http://t.co/HkaElt8IP1">Python para Zumbis</a>, adora dar aulas nos quatro cantos do mundo. Formado em Computação pelo IME-USP e mestrado pelo ITA. Desenvolveu projetos para a Cobra Tecnologia, Credicard Mastercard, PriceWaterhouse &amp; Coopers e Itaú BankBoston. Interesses: Python, NoSQL, Pentaho, Google Technology, Facebook
-
+    <section id="section-speaker" class="section-wrapper team gray-bg">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>KEYNOTES</h1>
+            </div>
+          </div>
+        </div>
+          <div class="row">
+            <div class="col-sm-6 col-md-3">
+              <figure class="thumbnail">
+                <a href="#"><img src="images/gileno.jpeg" class="img-responsive" alt="Image"></a>
+                <figcaption class="caption text-center">
+                  <h3>Gileno Filho</h3>
+                  <p>Fundador da empresa PyCursos em 2012, trabalha com Python desde 2008, participando ativamente das comunidades de software livre, palestrando em eventos como Python Brasil, Python Nordeste, Campus Party entre outros eventos.
+                      Pelo PyCursos, já ministrou treinamentos em empresas e instituições como: Mercado Livre, Câmara dos Deputados, Grupo Zenir, UFPE, IFMA, FPF Tech entre outros
                     </p>
-                </a>
-            </li>
-
-            <li class="speaker">
-                <a href="#" target="_blank" class="speaker-link">
-                    <div class="photo">
-                        <img src="/images/nilo.png" alt="Temp">
-                    </div>
-
-                    <h2 class="speaker-name">Nilo Menezes</h2>
-                    <p class="speaker-description">Desenvolvedor, empresário e autor do livro <a href="http://python.nilo.pro.br">Introdução à Programação com Python</a>. Formado em Processamento de dados e Mestre em Informática pela Universidade Federal do Amazonas (UFAM). Participa ativamente na comunidade Python Brasil e é um dos organizadores da conferência e do grupo PyNorte.
-                    </p>
-                </a>
-            </li>
-
-        </ul>
-    </div>
-</section>
+                  <ul class="social-links">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                  </ul>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+      </div>
+    </section>
