--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -1,33 +1,37 @@
-<section class="sponsors" id="sponsors">
-    <div class="row">
-        <h1>Patrocinadores</h1>
-
-        <h1>
-            <a href="mailto:amazonia@python.org.br" target="_blank">
-            <span style="text-align:center">Seja um patrocinador</span></a>
-        </h1>
-
-        <ul class="sponsors-list">
-
-            <li class="item">
-                <a href="https://www.python.org/psf/" target="_blank" class="item-link">
-                    <p class="category">Apoio</p>
-
-                    <div class="imgs">
-                        <img src="/images/sponsors/gold/python-foundation.svg" alt="Python Foundation">
-                    </div>
-                </a>
-            </li>
-
-            <li class="item">
-                <a href="http://wiki.python.org.br/" target="_blank" class="item-link">
-                    <p class="category">Apoio</p>
-                    <div class="imgs">
-                        <img src="/images/sponsors/support/apyb.png" alt="APyB">
-                    </div>
-                </a>
-            </li>
-
-        </ul>
-    </div>
-</section>
+    <section id="section-partner" class="section-wrapper client-logo">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>PATROCINADORES</h1>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="text-center">Seja um patrocinador!</h2>
+          </div>
+        </div>
+        <!-- <div class="row">
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-1.jpg" alt="Image"></a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-2.jpg" alt="Image"></a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-3.jpg" alt="Image"></a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-4.jpg" alt="Image"></a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-5.jpg" alt="Image"></a>
+          </div>
+          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+            <a href="#"><img src="img/logo-client-6.jpg" alt="Image"></a>
+          </div>
+        </div> -->
+      </div>
+      <!--end of .container -->
+    </section>
