--- a/theme/templates/includes/volunteers.html
+++ b/theme/templates/includes/volunteers.html
@@ -1,28 +1,11 @@
-<section class="volunteers">
-  <div class="row" align="center">
-    <h1>Organização</h1>
-    <a href="https://twitter.com/lskbr" target="_blank">Nilo Menezes (PyNorte)</a>
-    <br/>
-    <br/>
-    <br/>
-    <h1>Voluntários</h1>
-    <ul>
-      <li><a href="https://twitter.com/apast" target="_blank">Adriano Praia (PyNorte/Manaus)</a></li>
-      <li><a href="https://twitter.com/luizfcb" target="_blank">Fabio Barrionuevo da Luz (PyNorte/Palmas)</a></li>
-      <li><a href="https://twitter.com/pixeledbird" target="_blank">João Soares (PyNorte/Belém)</a></li>
-      <li><a href="https://twitter.com/marcosthomazs" target="_blank">Marcos Thomaz (PyNorte/Rio Branco)</a></li>
-      <li>Pedro Cavalcante (PyNorte/Manaus)</li>
-      <li><a href="https://twitter.com/jukxapp" target="_blank">Felipe Jukx (PyNorte/Manaus)</a></li>
-      <li><a href="https://twitter.com/felipecolen" target="_blank">Felipe Colen (PyNorte/Porto Velho)</a></li>
-    </ul>
-    <br/>
-    <br/>
-    <br/>
-    <h1>Coordenação UEA</h1>
-    <ul>
-      <li>Prof&#xaa; Daniele Gordiano Valente <br>(Coordenação Local)</li>
-      <li>Prof&#xaa; Daniele Noronha Pontes <br>(Coordenação Institucional)</li>
-    </ul>
-  </div>
-
-</section>
+    <section id="section-team" class="section-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>ORGANIZAÇÃO</h1>
+              <p>Felipe Carvalho</p>
+            </div>
+          </div>
+        </div>
+    </section>
