--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -11,13 +11,15 @@
 
   {% include "includes/speakers.html" %}
 
-  {% include "includes/location.html" %}
+  {% include "includes/papers.html" %}
 
   {% include "includes/schedule.html" %}
 
   {% include "includes/sponsors.html" %}
 
-  {% include "includes/volunteers.html" %}
+  {% include "includes/location.html" %}
+
+  {# {% include "includes/volunteers.html" %} #}
 
   {% include "includes/followus.html" %}
 {% endblock %}
