--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -1,32 +1,23 @@
-<section class="about" id="about">
-  <div class="row">
-      <div class="column">
-        {% include "includes/icons/conference-icon.html" %}
-        <h1>Conferência</h1>
-        <p>A PyCon Amazônia reunirá centenas de pessoas durante 2 dias para discutir sobre software livre, práticas de desenvolvimento e Python.</p>
-        <p class="code-of-conduct"><a href="https://github.com/pythonbrasil/codigo-de-conduta" target="_blank">Leia nosso Código de Conduta</a></p>
+    <section id="section-intro" class="section-wrapper about-event">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p class="lead">
+              A PyCon Amazônia reunirá centenas de pessoas durante dois dias para discutir sobre software livre, práticas de desenvolvimento e Python.
+            </p>
+            <p class="lead">
+              Este evento é organizado pela comunidade e para a comunidade. Conheça mais sobre o PyNorte e PyLadies Amazonas. Participe, compartilhe conhecimento e ajude a comunidade a crescer.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <address>
+              <strong>Instituto Federal do Amazonas - IFAM</strong><br>
+              Avenida Sete de Setembro, 1975<br>
+              Centro<br>
+              Manaus/AM, 69020-120<br>
+              (92) 3621-6700
+            </address>
+          </div>
+        </div>
       </div>
-
-      <div class="column">
-        {% include "includes/icons/staff-icon.html" %}
-        <h1>Organização</h1>
-        <p>A PyCon Amazônia 2017 é organizada pelo PyNorte com ajuda da Apyb (Associação PythonBrasil).</p>
-        <p class="code-of-conduct"><a href="http://wiki.python.org.br/" target="_blank">Acesse o portal da APyB</a></p>
-      </div>
-  </div>
-  <div class="row">
-
-      <div class="column">
-        {% include "includes/icons/staff-icon.html" %}
-        <h1>Envie sua proposta de palestra!</h1>
-          <p>Apresente na PyCon Amazônia e compartilhe o que você sabe sobre Python com a comunidade.</p>
-          <p class="code-of-conduct">ENCERRADO</p>
-      </div>
-      <div class="column">
-        {% include "includes/icons/staff-icon.html" %}
-        <h1>Contato</h1>
-          <p>Email: <a href="mailto:pyamazonia@python.org.br">pyamazonia@python.org.br</a></p>
-          <p>Telegram: <a href="http://bit.ly/pynorte">bit.ly/pynorte</a></p>
-      </div>
-  </div>
-</section>
+    </section>
