--- a/theme/templates/includes/followus.html
+++ b/theme/templates/includes/followus.html
@@ -1,17 +1,16 @@
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=100732530004170";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<section class="followus">
-  <div class="row">
-    <h1>Acompanhe notícias do evento e da comunidade PyNorte</h1>
-
-	<div class="social facebook">
-		<div class="fb-page" data-href="https://www.facebook.com/pynorte/" data-tabs="timeline,events" data-width="500" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pythonbrasil"><a href="https://www.facebook.com/pynorte/">PyNorte</a></blockquote></div></div>
-	</div>
-  </div>
-</section>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=100732530004170";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <section id="follow-us" class="section-wrapper">
+      <div class="row">
+        <h4 class="text-center">Acompanhe notícias do evento e da comunidade PyNorte</h5>
+      <div class="social facebook text-center">
+        <div class="fb-page" data-href="https://www.facebook.com/pynorte/" data-tabs="timeline,events" data-width="500" data-height="300" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pythonbrasil"><a href="https://www.facebook.com/pynorte/">PyNorte</a></blockquote></div></div>
+      </div>
+      </div>
+    </section>
