--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -1,26 +1,38 @@
-<section class="welcome">
-  <div class="row">
     <header class="header">
-
-      <div class="menu-scroll">
-        <div class="center">
-          {% include "includes/menu.html" %}
+      <nav class="navbar main-menu" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/pycon-amazonia.jpg" alt=""></a>
+          </div>
+          <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <ul class="nav navbar-nav">
+              <li class="hidden"><a href="#page-top"></a></li>
+              <li><a class="page-scroll" href="#section-intro">Sobre</a></li>
+              <li><a class="page-scroll" href="#section-speaker">Keynotes</a></li>
+              <li><a class="page-scroll" href="#section-papers">Call4Papers</a></li>
+              <li><a class="page-scroll" href="#section-schedule">Programação</a></li>
+              <li><a class="page-scroll" href="#section-partner">Patrocinadores</a></li>
+              <li><a class="page-scroll" href="#section-venue">Local</a></li>
+              {# <li><a class="page-scroll" href="#section-team">Organização</a></li> #}
+            </ul>
+          </div>
         </div>
-      </div>
-
-      {% include "includes/menu.html" %}
+      </nav>
     </header>
-
-    <article class="info">
-      <h1>PyCon Amazônia</h1>
-      <h3>1ª conferência da comunidade Python do Norte do Brasil</h3>
-
-      <h2>12 e 13 de Agosto de 2017</h2>
-
-      <p>Universidade do Estado do Amazonas/Escola Superior de Tecnologia (UEA/EST)<br/>
-      Manaus/AM</p>
-
-      <a href="https://www.eventbrite.com.br/e/pycon-amazonia-2017-tickets-33333942720" target="_blank" class="register">INSCREVA-SE AQUI</a>
-    </article>
-  </div>
-</section>
+    <div class="jumbotron text-center">
+      <div style="width: 100; height: 100%; background: rgba(14,21,85, 0.75);"></div>
+      <div class="content">
+        <div class="event-date">AGOSTO 18-19, MANAUS/AM</div>
+        <h1>PYCON AMAZÔNIA 2018</h1>
+        <p class="lead">2ª Conferência da Comunidade Python no Norte do Brasil</p>
+        <a href="https://www.sympla.com.br/pycon-amazonia-2018__287688">
+          <button type="button" class="btn btn-default btn-lg">Inscreva-se!</button>
+        </a>
+      </div>
+    </div>
