--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -4,7 +4,7 @@
           <div class="col-md-12">
             <div class="section-title">
               <h1>LOCAL</h1>
-              <p>Instituto Federal de Educação, Ciência e Tecnologia do Amazonas</p>
+              <p>IFAM - Instituto Federal de Educação, Ciência e Tecnologia do Amazonas</p>
               <p>Avenida Sete de Setembro, 1975, Centro, Manaus/AM</p>
             </div>
           </div>
