atualizando infos para pvh e 2019

--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -6,16 +6,16 @@
               A PyCon Amazônia reunirá centenas de pessoas durante dois dias para discutir sobre software livre, práticas de desenvolvimento e Python.
             </p>
             <p class="lead">
-              Este evento é organizado pela comunidade e para a comunidade. Conheça mais sobre o PyNorte e PyLadies Amazonas. Participe, compartilhe conhecimento e ajude a comunidade a crescer.
+              Este evento é organizado pela comunidade e para a comunidade. Conheça mais sobre o PyNorte e PyLadies. Participe, compartilhe conhecimento e ajude a comunidade a crescer.
             </p>
           </div>
           <div class="col-md-4">
             <address>
-              <strong>Instituto Federal do Amazonas - IFAM</strong><br>
-              Avenida Sete de Setembro, 1975<br>
-              Centro<br>
-              Manaus/AM, 69020-120<br>
-              (92) 3621-6700
+              <strong>Instituto Federal de Rondônia - IFRO</strong><br>
+              Av. Gov. Jorge Teixeira, 3.146<br>
+              Industrial<br>
+              Porto Velho/RO, 76821-002<br>
+              (69) 2182-3815
             </address>
           </div>
         </div>
