--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -4,8 +4,8 @@
           <div class="col-md-12">
             <div class="section-title">
               <h1>LOCAL</h1>
-              <p>IFAM - Instituto Federal de Educação, Ciência e Tecnologia do Amazonas</p>
-              <p>Avenida Sete de Setembro, 1975, Centro, Manaus/AM</p>
+              <p>IFRO - Instituto Federal de Educação, Ciência e Tecnologia de Rondônia</p>
+              <p>Av. Gov. Jorge Teixeira, 3.146, Industrial - Porto Velho/RO</p>
             </div>
           </div>
         </div>
