--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -28,11 +28,11 @@
     <div class="jumbotron text-center">
       <div style="width: 100; height: 100%; background: rgba(14,21,85, 0.75);"></div>
       <div class="content">
-        <div class="event-date">AGOSTO 18-19, MANAUS/AM</div>
-        <h1>PYCON AMAZÔNIA 2018</h1>
-        <p class="lead">2ª Conferência da Comunidade Python no Norte do Brasil</p>
-        <a href="https://www.sympla.com.br/pycon-amazonia-2018__287688">
-          <button type="button" class="btn btn-default btn-lg">Inscreva-se!</button>
+        <div class="event-date">AGOSTO 18-19, Porto Velho/RO</div>
+        <h1>PYCON AMAZÔNIA 2019</h1>
+        <p class="lead">3ª Conferência da Comunidade Python no Norte do Brasil</p>
+        <a href="#">
+          <button type="button" class="btn btn-default btn-lg">Inscrições em breve!</button>
         </a>
       </div>
     </div>
