--- a/theme/templates/includes/location.html
+++ b/theme/templates/includes/location.html
@@ -12,8 +12,8 @@
         <div class="row">
           <div class="col-md-12">
             <div id="googleMap">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.85018571195!2d-60.01499228465953!3d-3.134256441318914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c057715e51dc1%3A0x131a0659382fadd9!2sInstituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+do+Amazonas+-+IFAM+-+Unidade+Centro!5e0!3m2!1spt-BR!2sbr!4v1525457587301"
-                frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15774.013427903743!2d-63.882409414898454!3d-8.738617849561427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x15151a7b52d18c02!2sIFRO+-+Instituto+Federal+de+Educa%C3%A7%C3%A3o%2C+Ci%C3%AAncia+e+Tecnologia+de+Rond%C3%B4nia+-+Campus+Zona+Norte!5e0!3m2!1spt-BR!2sbr!4v1555859244586!5m2!1spt-BR!2sbr"
+                      frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
