--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -10,18 +10,19 @@
           <div class="row">
             <div class="col-sm-6 col-md-3">
               <figure class="thumbnail">
-                <a href="#"><img src="images/gileno.jpeg" class="img-responsive" alt="Image"></a>
+                <a href="#"><img src="images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
                 <figcaption class="caption text-center">
-                  <h3>Gileno Filho</h3>
-                  <p>Fundador da empresa PyCursos em 2012, trabalha com Python desde 2008, participando ativamente das comunidades de software livre, palestrando em eventos como Python Brasil, Python Nordeste, Campus Party entre outros eventos.
-                      Pelo PyCursos, já ministrou treinamentos em empresas e instituições como: Mercado Livre, Câmara dos Deputados, Grupo Zenir, UFPE, IFMA, FPF Tech entre outros
-                    </p>
+                  <h3>Eduardo Mendes</h3>
+                  <p>
+                    Apto fazedor de lambdas, apaixonado por software livre e ciência.
+                  </p>
                   <ul class="social-links">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i>@eduardomendes</a></li>
+                    <li><a href="#"><i class="fa fa-github"></i>@dunossauro</a></li>
+                    <li><a href="#"><i class="fa fa-gitlab"></i>@dunossauro</a></li>
                   </ul>
+
                 </figcaption>
               </figure>
             </div>
