--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -1,31 +1,54 @@
-    <section id="section-speaker" class="section-wrapper team gray-bg">
-      <div class="container">
+<section id="section-speaker" class="section-wrapper team gray-bg">
+    <div class="container">
         <div class="row">
-          <div class="col-md-12">
-            <div class="section-title">
-              <h1>KEYNOTES</h1>
+            <div class="col-md-12">
+                <div class="section-title">
+                    <h1>KEYNOTES</h1>
+                </div>
             </div>
-          </div>
         </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-3">
-              <figure class="thumbnail">
-                <a href="#"><img src="images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
-                <figcaption class="caption text-center">
-                  <h3>Eduardo Mendes</h3>
-                  <p>
-                    Apto fazedor de lambdas, apaixonado por software livre e ciência.
-                  </p>
-                  <ul class="social-links">
-                    <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li>
-                    <li><a href="#"><i class="fa fa-youtube"></i>@eduardomendes</a></li>
-                    <li><a href="#"><i class="fa fa-github"></i>@dunossauro</a></li>
-                    <li><a href="#"><i class="fa fa-gitlab"></i>@dunossauro</a></li>
-                  </ul>
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <figure class="thumbnail">
+                    <a href="#"><img src="images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
+                    <figcaption class="caption text-center">
+                        <h3>Eduardo Mendes</h3>
 
-                </figcaption>
-              </figure>
+                        <ul class="social-links">
+                            <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li>
+                            <li><a href="https://www.youtube.com/user/eduardomendes"><i class="fa fa-youtube"></i>eduardomendes</a></li>
+                            <li><a href="#"><i class="fa fa-github"></i>@dunossauro</a></li>
+                            <li><a href="#"><i class="fa fa-gitlab"></i>@dunossauro</a></li>
+                        </ul>
+
+                        <p>
+                            Apto fazedor de lambdas, apaixonado por software livre e ciência.
+                        </p>
+
+
+                    </figcaption>
+                </figure>
             </div>
-          </div>
-      </div>
-    </section>
+
+            <div class="col-sm-6 col-md-6">
+                <figure class="thumbnail">
+                    <a href="#"><img src="images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
+                    <figcaption class="caption text-center">
+                        <h3>Renzo Nuccitelli</h3>
+
+                        <ul class="social-links">
+                            <li><a href="#"><i class="fa fa-linkedin"></i>renzonuccitelli</a></li>
+                            <li><a href="https://www.youtube.com/user/renzonuccitelli"><i class="fa fa-youtube"></i>renzonuccitelli</a></li>
+                            <li><a href="#"><i class="fa fa-github"></i>@renzon</a></li>
+                        </ul>
+
+                        <p>
+                            Engenheiro de Computação formado pelo ITA. Especialista em programação web no Google App Engine, usa Python desde 2009. Foi Diretor de Tecnologia na startup de educação QMagico, Apaixonado por dar aulas, é professor da Fatec onde ministra as matérias de "Orientação a Objetos" e "Aplicações para Internet Utilizando Banco de Dados". Já palestrou em eventos como Pycon US, Google Developer Bus, DevFest, Rupy e Python Brasil. Escreve sobre tecnologia em seu blog.renzo.pro.br. Atualmente é Engenheiro de Qualidade na Red Hat.
+                        </p>
+
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</section>
