--- a/theme/templates/includes/papers.html
+++ b/theme/templates/includes/papers.html
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="col-sm-12">
             <h2 class="text-center">
-              <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+              <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                 Envie sua proposta!
               </a>
             </h2>  
