--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -8,7 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/pycon-amazonia.jpg" alt=""></a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/logo-gray.svg" alt="" width="30%"></a>
           </div>
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
@@ -26,11 +26,11 @@
       </nav>
     </header>
     <div class="jumbotron text-center">
-      <div style="width: 100; height: 100%; background: rgba(14,21,85, 0.75);"></div>
+      <div style="width: 100%; height: 100%; background: rgba(14,80,85, 0.75);"></div>
       <div class="content">
-        <div class="event-date">AGOSTO 3-4, Porto Velho/RO</div>
+        <div class="event-date"><b>3 e 4 de AGOSTO, Porto Velho/RO</b></div>
         <h1>PYCON AMAZÔNIA 2019</h1>
-        <p class="lead">3ª Conferência da Comunidade Python no Norte do Brasil</p>
+        <p class="lead"><b>3ª Conferência da Comunidade Python no Norte do Brasil</b></p>
         <a href="#">
           <button type="button" class="btn btn-default btn-lg">Inscrições em breve!</button>
         </a>
