--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-6 col-md-6">
                 <figure class="thumbnail">
-                    <a href="#"><img src="images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
+                    <a href="#"><img src="{{ SITEURL }}/images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
                     <figcaption class="caption text-center">
                         <h3>Eduardo Mendes</h3>
 
@@ -32,7 +32,7 @@
 
             <div class="col-sm-6 col-md-6">
                 <figure class="thumbnail">
-                    <a href="#"><img src="images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
+                    <a href="#"><img src="{{ SITEURL }}/images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
                     <figcaption class="caption text-center">
                         <h3>Renzo Nuccitelli</h3>
 
