--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -8,7 +8,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img src="/images/logo-gray.svg" alt="" width="30%"></a>
+            <a class="navbar-brand page-scroll" href="#page-top"><img src="{{ SITEURL }}/images/logo-gray.svg" alt="" width="30%"></a>
           </div>
           <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
             <ul class="nav navbar-nav">
