--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="/theme/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
+    <link href="{{ SITEURL }}/theme/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
@@ -10,7 +10,7 @@
     {% block style %}
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,500' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/theme/css/main.css">
+    <link rel="stylesheet" href="{{ SITEURL }}/theme/css/main.css">
     {% endblock %}
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar">
