--- a/theme/templates/includes/menu.html
+++ b/theme/templates/includes/menu.html
@@ -1,6 +1,6 @@
 <div class="logo">
   <h1>
-    <img src="/images/logo.svg" alt="Logo">
+    <img src="{{ SITEURL }}/images/logo.svg" alt="Logo">
     <span><strong>PyCon</strong>Amazônia 2019</span>
   </h1>
 </div>
