--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <link href="{{ SITEURL }}/theme/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
