--- a/theme/templates/includes/speakers.html
+++ b/theme/templates/includes/speakers.html
@@ -10,15 +10,15 @@
         <div class="row">
             <div class="col-sm-6 col-md-6">
                 <figure class="thumbnail">
-                    <a href="#"><img src="{{ SITEURL }}/images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
+                    <a href="#section-speaker"><img src="{{ SITEURL }}/images/keynote_eduardo.jpg" class="img-responsive" alt="Image"></a>
                     <figcaption class="caption text-center">
                         <h3>Eduardo Mendes</h3>
 
                         <ul class="social-links">
-                            <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li>
-                            <li><a href="https://www.youtube.com/user/eduardomendes"><i class="fa fa-youtube"></i>eduardomendes</a></li>
-                            <li><a href="#"><i class="fa fa-github"></i>@dunossauro</a></li>
-                            <li><a href="#"><i class="fa fa-gitlab"></i>@dunossauro</a></li>
+<!--                             <li><a href="#"><i class="fa fa-twitter"></i>@dunossauro</a></li> -->
+                            <li><a href="http://youtube.com/c/eduardomendes"><i class="fa fa-youtube"></i>eduardomendes</a></li>
+                            <li><a href="https://github.com/dunossauro"><i class="fa fa-github"></i>@dunossauro</a></li>
+                            
                         </ul>
 
                         <p>
@@ -32,7 +32,7 @@
 
             <div class="col-sm-6 col-md-6">
                 <figure class="thumbnail">
-                    <a href="#"><img src="{{ SITEURL }}/images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
+                    <a href="#section-speaker"><img src="{{ SITEURL }}/images/keynote_renzo.jpg" class="img-responsive" alt="Image"></a>
                     <figcaption class="caption text-center">
                         <h3>Renzo Nuccitelli</h3>
 
