add link inscrição e apoiadores

--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -1,37 +1,33 @@
-    <section id="section-partner" class="section-wrapper client-logo">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-title">
-              <h1>PATROCINADORES</h1>
-            </div>
-          </div>
+<section id="section-partner" class="section-wrapper client-logo">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="section-title">
+          <h1>APOIADORES</h1>
         </div>
-        <div class="row">
-          <div class="col-sm-12">
-            <h2 class="text-center">Seja um patrocinador!</h2>
-          </div>
-        </div>
-        <!-- <div class="row">
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-1.jpg" alt="Image"></a>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-2.jpg" alt="Image"></a>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-3.jpg" alt="Image"></a>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-4.jpg" alt="Image"></a>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-5.jpg" alt="Image"></a>
-          </div>
-          <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
-            <a href="#"><img src="img/logo-client-6.jpg" alt="Image"></a>
-          </div>
-        </div> -->
       </div>
-      <!--end of .container -->
-    </section>
+    </div>
+    <div class="row" align="center">
+      <div class="col-sm-12">
+        <h2 class="text-center">Seja um apoiador também!</h2>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+        <a href="https://www.ifro.edu.br/zona-norte" target="_blank">
+          <img src="img/logo-ifro.jpg" alt="IFRO Zona Norte" height="100px">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+        <a href="https://www.youtube.com/c/eduardomendes" target="_blank">
+          <img src="img/logo-live-py.jpg" alt="Live de Python" height="100px">
+        </a>
+      </div>
+      <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
+        <a href="https://www.python.pro.br/" target="_blank">
+          <img src="img/logo-py-pro.jpg" alt="Python Pro" height="100px">
+        </a>
+      </div>
+
+    </div>
+  </div>
+  <!--end of .container -->
+</section>
