--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -17,7 +17,7 @@
               <li><a class="page-scroll" href="#section-speaker">Keynotes</a></li>
               <li><a class="page-scroll" href="#section-papers">Call4Papers</a></li>
               <li><a class="page-scroll" href="#section-schedule">Programação</a></li>
-              <li><a class="page-scroll" href="#section-partner">Patrocinadores</a></li>
+              <li><a class="page-scroll" href="#section-partner">Apoiadores</a></li>
               <li><a class="page-scroll" href="#section-venue">Local</a></li>
               {# <li><a class="page-scroll" href="#section-team">Organização</a></li> #}
             </ul>
@@ -31,8 +31,8 @@
         <div class="event-date"><b>3 e 4 de AGOSTO, Porto Velho/RO</b></div>
         <h1>PYCON AMAZÔNIA 2019</h1>
         <p class="lead"><b>3ª Conferência da Comunidade Python no Norte do Brasil</b></p>
-        <a href="#">
-          <button type="button" class="btn btn-default btn-lg">Inscrições em breve!</button>
+        <a href="https://www.eventbrite.com.br/e/3a-pycon-amazonia-porto-velhoro-tickets-62957486537">
+          <button type="button" class="btn btn-success btn-lg">Quero me inscrever agora!</button>
         </a>
       </div>
     </div>
