add logo ifro horizontal

--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
         <a href="https://www.ifro.edu.br/zona-norte" target="_blank">
-          <img src="{{ SITEURL }}/images/logo-ifro.png" alt="IFRO Zona Norte" >
+          <img src="{{ SITEURL }}/images/logo-ifro-hz.png" alt="IFRO Zona Norte" >
         </a>
       </div>
       <div class="col-md-2 col-sm-4 col-xs-6 section-margin">
