--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -12,7 +12,7 @@
         <h3 class="text-center">Seja um apoiador também!</h3>
       </div>
       <div align="center">
-        <div class="col-lg-12 col-md-12 col-sm-12 section-margin">
+        <div class="col-lg-3 col-lg-offset-6 col-md-6 col-md-offset-3 col-sm-12 section-margin">
           <a href="https://www.ifro.edu.br/zona-norte" target="_blank">
             <img src="{{ SITEURL }}/images/logo-ifro.png" alt="IFRO Zona Norte" >
           </a>
