--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -4,30 +4,35 @@
       <div class="col-md-12">
         <div class="section-title">
           <h1>APOIADORES</h1>
+          <h3 class="text-center">
+          <a href="https://api.whatsapp.com/send?phone=5569981054650&text=Olá%20,%20vi%20o%20seu%20site%20sobre%20a%20PyCon%20Amazônia%20e%20eu%20gostaria%20de%20apoiar%20tbm">
+            Quero apoiar também! <span class="fa fa-whatsapp"></span>
+          </a>
+        </h3>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12">
-        <h3 class="text-center">Seja um apoiador também!</h3>
+
+      <div class="col-lg-4 col-md-4 col-sm-12 section-margin">
+        <a href="https://www.youtube.com/c/eduardomendes" target="_blank">
+          <img src="{{ SITEURL }}/images/logo-live-py.png" alt="Live de Python" >
+        </a>
       </div>
-      <div align="center">
-        <div class="col-lg-3 col-lg-offset-6 col-md-6 col-md-offset-3 col-sm-12 section-margin">
-          <a href="https://www.ifro.edu.br/zona-norte" target="_blank">
-            <img src="{{ SITEURL }}/images/logo-ifro.png" alt="IFRO Zona Norte" >
-          </a>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 section-margin">
-          <a href="https://www.youtube.com/c/eduardomendes" target="_blank">
-            <img src="{{ SITEURL }}/images/logo-live-py.png" alt="Live de Python" >
-          </a>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 section-margin">
-          <a href="https://www.python.pro.br/" target="_blank">
-            <img src="{{ SITEURL }}/images/logo-py-pro.png" alt="Python Pro" >
-          </a>
-        </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-12 section-margin">
+        <a href="https://www.ifro.edu.br/zona-norte" target="_blank">
+          <img src="{{ SITEURL }}/images/logo-ifro.png" alt="IFRO Zona Norte" >
+        </a>
       </div>
+
+      <div class="col-lg-4 col-md-4 col-sm-12 section-margin">
+        <a href="https://www.python.pro.br/" target="_blank">
+          <img src="{{ SITEURL }}/images/logo-py-pro.png" alt="Python Pro" >
+        </a>
+      </div>
+
+
     </div>
   </div>
   <!--end of .container -->
