add programacao provisoria e link pro vakinha

--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -5,8 +5,13 @@
         <div class="section-title">
           <h1>APOIADORES</h1>
           <h3 class="text-center">
-          <a href="https://api.whatsapp.com/send?phone=5569981054650&text=Olá%20,%20vi%20o%20seu%20site%20sobre%20a%20PyCon%20Amazônia%20e%20eu%20gostaria%20de%20apoiar%20tbm">
-            Quero apoiar também! <span class="fa fa-whatsapp"></span>
+          <a href="http://vaka.me/635040" target="_blank">
+            Quero apoiar também!
+            <img src="{{ SITEURL }}/images/logo_vakinha.png" alt="Vakinha" style=" width: 10%">
+          </a>
+            <br />
+            <a href="https://api.whatsapp.com/send?phone=5569981054650&text=Olá%20,%20vi%20o%20seu%20site%20sobre%20a%20PyCon%20Amazônia%20e%20eu%20gostaria%20de%20apoiar%20tbm">
+            Mais informações sobre como ajudar <span class="fa fa-whatsapp"></span>
           </a>
         </h3>
         </div>
