add botoes no inicio

--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -34,5 +34,15 @@
         <a href="https://www.eventbrite.com.br/e/3a-pycon-amazonia-porto-velhoro-tickets-62957486537" target="_blank">
           <button type="button" class="btn btn-success btn-lg">Quero me inscrever agora!</button>
         </a>
+
+        <br />
+
+        <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/" target="_blank">
+          <button type="button" class="btn btn-warning btn-lg">Quero palestrar!</button>
+        </a>
+
+        <a href="http://vaka.me/635040" target="_blank">
+          <button type="button" class="btn btn-primary btn-lg">Quero contribuir R$ !</button>
+        </a>
       </div>
     </div>
