--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -117,7 +117,7 @@
 
               <tr>
                 <th scope="row">1</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -128,7 +128,7 @@
 
               <tr>
                 <th scope="row">2</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> De código para código: python, pandas e a inferência estatística no Direito   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -139,7 +139,7 @@
 
               <tr>
                 <th scope="row">3</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -150,7 +150,7 @@
 
               <tr>
                 <th scope="row">4</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Python na Programação Competitiva   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -162,7 +162,7 @@
 
               <tr>
                 <th scope="row">5</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Data scientist: The sexiest job that you've likely never heard of   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -173,7 +173,7 @@
 
               <tr>
                 <th scope="row">6</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Desmistificando o ML (machine learning)   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -184,7 +184,7 @@
 
               <tr>
                 <th scope="row">7</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Filósofo e Pythonista: Como a programação foi capaz de revolucionar a minha forma de trabalhar   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -196,7 +196,7 @@
 
               <tr>
                 <th scope="row">8</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Python para todos os dispositivos!   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -207,7 +207,7 @@
 
               <tr>
                 <th scope="row">9</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Python + Criptografia: Guia prático para iniciar sua aplicação   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -218,7 +218,7 @@
 
               <tr>
                 <th scope="row">10</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Python e a Bolsa de Valores   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -229,7 +229,7 @@
 
               <tr>
                 <th scope="row">11</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> [Tutorial] Conceituando e criando uma RESTful API com Django e Django Rest Framework   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -242,7 +242,7 @@
 
               <tr>
                 <th scope="row">12</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> DataRefugees - Open Data   </td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
@@ -254,7 +254,7 @@
 
               <tr>
                 <th scope="row">13</th>
-                <td> Dia 3/4</td>
+                <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td>Criando um chatbot com Python e Dialogflow (Google)</td>
                 <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
